feat: align xtimer incident demos and runbooks